...
            "state" : "translated",
            "value" : "英语"
          }
        }
      }
    },
    "Error" : {
      "comment" : "Generic error alert title",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "书呆子的统计数据"
          }
        }
      }
    },
    "Subscriptions" : {
      "comment" : "Library section tab label",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
